<resources>
    <string name="app_name">MarketplaceProject</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Luis Barrón</string>
    <string name="nav_header_subtitle">luisferbarron@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_articulos">Mis artículos</string>
    <string name="menu_agregararticulos">Agregar artículo</string>
    <string name="articulo_seleccionado">Información del artículo</string>
    <string name="vendedor">Información del vendedor</string>
    <string name="menu_logout">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>