<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/inicio">


    <fragment
        android:id="@+id/inicio"
        android:name="com.example.marketplaceproject.Inicio"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" >
        <action
            android:id="@+id/action_inicio_to_articuloVenta"
            app:destination="@id/articuloVenta" />
    </fragment>
    <fragment
        android:id="@+id/perfil"
        android:name="com.example.marketplaceproject.Perfil"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/articulos"
        android:name="com.example.marketplaceproject.articulos"
        android:label="@string/menu_articulos"
        tools:layout="@layout/fragment_articulos" >
        <action
            android:id="@+id/action_articulos_to_agregarart"
            app:destination="@id/agregarart" />
    </fragment>
    <fragment
        android:id="@+id/agregarart"
        android:name="com.example.marketplaceproject.agregarart"
        android:label="@string/menu_agregararticulos"
        tools:layout="@layout/fragment_agregarart" >
        <action
            android:id="@+id/action_agregarart_to_articulos"
            app:destination="@id/articulos" />
    </fragment>
    <fragment
        android:id="@+id/articuloVenta"
        android:name="com.example.marketplaceproject.articuloVenta"
        android:label="@string/articulo_seleccionado"
        tools:layout="@layout/fragment_articulo_venta" >
        <action
            android:id="@+id/action_articuloVenta_to_inicio"
            app:destination="@id/inicio" />
        <action
            android:id="@+id/action_articuloVenta_to_perfilVendedor"
            app:destination="@id/perfilVendedor" />
    </fragment>
    <fragment
        android:id="@+id/perfilVendedor"
        android:name="com.example.marketplaceproject.perfilVendedor"
        android:label="@string/vendedor"
        tools:layout="@layout/fragment_perfil_vendedor" >
        <action
            android:id="@+id/action_perfilVendedor_to_articuloVenta"
            app:destination="@id/articuloVenta" />
    </fragment>


</navigation>